# transientecc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/transientecc/: AESGCM.hpp  ECDHSession.hpp  curve_pool.hpp  keygen.hpp  obfuscator.hpp
src/: AESGCM.cpp  ECDHSession.cpp  aes_demo.cpp  benchmark.cpp  curve_pool.cpp  ecdh_demo.cpp  keygen.cpp  main.cpp  obfuscator.cpp
tests/: CMakeLists.txt  test_obfuscator.cpp
